# pgmerge

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  NOTICE  README.md  config.py.example  db_graph.py  db_inspect.py  db_meta.py  ideas.md  pg_connect.py  pg_inspect.py  pg_merge.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.github/workflows/: test.yml  tests.yml
docs/: configs.md  dev.md  faq.md  ideas.md
pgmerge/: __init__.py  db_config.py  db_export.py  db_graph.py  db_import.py  db_inspect.py  default_config_schema.yml  pg_pass.py  pgmerge.py  tables_config_schema.yml  utils.py
pgmerge/tests/: helpers.py  test_cli.py  test_config.py  test_db.py  test_utils.py
